Fix blank gap

--- a/less/custom.less
+++ b/less/custom.less
@@ -319,10 +319,6 @@ form input.use-datepicker[type=text] {
     }
 }
 
-#wrapper {
-    padding-top: 100px;
-}
-
 .okfn {
     text-align: center;
     font-weight: bold;
